@@ -9,6 +9,7 @@ Enhancements:
 - format2: add the %(exec) function
 - format2: add the %(shell) function
 - format2: security feature for %(exec) and %(shell)
+- format2: add the %(snl) function
 Changes:
 - format1: removed older formatter in favor of format2
 - format2: add check for empty key
